<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="22dp"
        android:hint="@string/taskActivityLabel"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/save" 
        android:onClick="save"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText5"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@+id/button1"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/scoreLimit" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText4"
        android:layout_below="@+id/spinner1"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/timeLimit" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="34dp"
        android:layout_toLeftOf="@+id/button1"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/taskDescription" />

</RelativeLayout>