<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity" >

    <EditText
        android:id="@+id/changepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:onClick="save"
        android:text="@string/save" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/changepassword"
        android:layout_below="@+id/changepassword"
        android:layout_marginTop="74dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

</RelativeLayout>